--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <a href="roadmaps.html">ROADMAPS</a>
                     <a href="tutorial.html">TUTORIALS</a>
                     <a href="ebooks.html">EBOOKS</a>
+                    <a href="links.html">LINKS</a>
                 </div>
             </div>
             <a href="login.html" class="button">COMMUNITY</a>
@@ -119,52 +120,100 @@
 <div id="first" class="component">
   <div id="first" class="front">
     <div class="component-1">
-    <img src="img/Untitled-3.png " height="30px" width="50px" alt="">
+    <img src="img/Untitled-3.png " alt="">
     <h3>HTML</h3>
-    <p>HTML is the structure of a web page.</p>  
+    <p>HTML is the structure of a web page.</p>
   </div>
   <div class="component-1">
-    <img src="img/13.png " height="30px" width="50px" alt="">
+    <img src="img/13.png " alt="">
     <h3>CSS</h3>
     <p>CSS is the styling of a web page.</p>
   </div>
   <div class="component-1">
-      <img src="img/Untitled-18.jpg" height="30px" width="50px" alt="">
+      <img src="img/Untitled-18.jpg" alt="">
     <h3>JavaScript</h3>
-    <p>Adds interactivity and logic  
+    <p>Adds interactivity and logic
    DOM manipulation, events, API calls
 </p>
   </div>
   <div class="component-1">
-        <img src="img/5.jpg " height="30px" width="50px" alt="">
+        <img src="img/5.jpg " alt="">
     <h3>BOOTTRAPS</h3>
     <p>Prebuilt CSS components for fast UI design </p>
     </div>
+    <div class="component-1">
+      <img src=" img/Untitled-3.jpg " alt="">
+    <h3>REACT</h3>
+    <p>A JavaScript library for building user interfaces  reusable UI components.
+
+</p>
+  </div>
+  <div class="component-1">
+      <img src="img/3.png " alt="">
+    <h3>ANGULAR</h3>
+    <p>A full-fledged framework for building complex apps.
+
+</p>
+  </div>
+<div class="component-1">
+      <img src="img/]6.jpg" alt="">
+    <h3>TAILWIND CSS</h3>
+    <p>Utility-first CSS framework for fast UI building.</p>
+  </div>
+  <div class="component-1">
+      <img src="img/]4.png " alt="">
+    <h3>jQuery (legacy)</h3>
+    <p>A JavaScript library for DOM manipulation.</p>
+  </div>
+
   </div>
   </div>
 
   <div id="second" class="component">
     <div id="first" class="front">
     <div class="component-1">
-    <img src="img/Untitled-3.png " height="30px" width="50px" alt="">
+    <img src="img/Untitled-3.png " alt="">
     <h3>NODE JS</h3>
-    <p>JS for server-side apps using runtime environment (Node.js).</p>  
+    <p>JS for server-side apps using runtime environment (Node.js).</p>
   </div>
   <div class="component-1">
-    <img src="img/Untitled-11.png" height="30px" width="50px" alt="">
+    <img src="img/Untitled-11.png" alt="">
     <h3>PYTHON</h3>
     <p> Used in APIs, automation, data science, and back-end frameworks like Django/Flask</p>
   </div>
   <div class="component-1">
-      <img src="img/12.png" height="30px" width="50px" alt="">
+      <img src="img/12.png" alt="">
     <h3>PHP</h3>
     <p>Common for websites and CMS like WordPress</p>
   </div>
   <div class="component-1">
-        <img src="img/16.jpg" height="30px" width="50px" alt="">
+        <img src="img/16.jpg" alt="">
     <h3>RUBY</h3>
     <p> Known for the Ruby on Rails framework</p>
     </div>
+    <div class="component-1">
+        <img src="img/Untitled-10.png " alt="">
+    <h3>JAVA</h3>
+    <p>Java is used for Android development, enterprise Java, and server-side web development.</p>
+    </div>
+    <div class="component-1">
+        <img src="img/15.jpg" alt="">
+    <h3>C#</h3>
+    <p>Used for desktop applications, web applications, and enterprise applications.</p>
+    </div>
+    <div class="component-1">
+        <img src="img/Untitled-2.jpg " alt="">
+    <h3> Go (Golang) </h3>
+    <p>Compiled, statically typed language by Google.Use by Web servers, APIs, 
+      microservices, cloud applications</p>
+    </div>
+     <div class="component-1">
+        <img src="img/]1.png " alt="">
+    <h3>NODE JS</h3>
+    <p>JavaScript runtime built on Chrome's V8 engine. Use Back-end for web applications and APIs
+ </p>
+    </div>
+
   </div>
   </div>
   <script>
@@ -251,10 +300,11 @@ window.onload = function() {
                     <li><a href="ebooks.html">EBOOKS</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="roadmaps.html">ROADMAPS</a></li>
-                    <li><a href="contact.html">LINKS</a></li>
+                     <li><a href="contact.html">LINKS</a></li>
+                    <li><a href="contact.html">CONTACTS</a></li>
                     <li><a href="tutorial.html">TUTORIALS</a></li>
                     <li><a href="login.html">COMMUNITY</a></li>
-                    <li><a href="contact.html">CONTACTS</a></li>
+                   
                     
                 </ul>
             </div>
