--- a/login.html
+++ b/login.html
@@ -20,6 +20,7 @@
                     <a href="roadmaps.html">ROADMAPS</a>
                     <a href="tutorial.html">TUTORIALS</a>
                     <a href="ebooks.html">EBOOKS</a>
+                    <a href="links.html">LINKS</a>
                 </div>
             </div>
             <a href="login.html">COMMUNITY</a>
@@ -102,7 +103,7 @@
                     <li><a href="roadmaps.html">ROADMAPS</a></li>
                     <li><a href="community.html">COMMUNITY</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="contact.html">LINKS</a></li>
+                    <li><a href="links.html">LINKS</a></li>
                 </ul>
             </div>
             <div class="footer-content">
