--- a/roadmaps.html
+++ b/roadmaps.html
@@ -19,6 +19,7 @@
                     <a href="tutorial.html">TUTORIALS</a>
                     <a href="roadmaps.html" class="active">ROADMAPS</a>
                     <a href="ebooks.html">EBOOKS</a>
+                    <a href="links.html">LINKS</a>
                 </div>
             </div>
             <a href="login.html">COMMUNITY</a>
@@ -36,20 +37,20 @@
                 <div class="roadmap-card">
                     <h3>HTML<br> Roadmap</h3>
                     <p>Learn the fundamentals of web structure</p>
-                    <a href="roadmaps/html-roadmap.pdf" class="btn download-btn" download>Download</a>
-                    <a href="roadmaps/html-roadmap.pdf" class="btn open-btn" target="_blank">Open</a>
+                    <a href="Roadmaps/HTML ROADMAP.pdf" class="btn download-btn" download>Download</a>
+                    <a href="Roadmaps/HTML ROADMAP.pdf " class="btn open-btn" target="_blank">Open</a>
                 </div>
                 <div class="roadmap-card">
-                    <h3>CSS<br> Roadmap</h3>
+                    <h3>FRONT-END<br> Roadmap</h3>
                     <p>Master web styling and layout</p>
-                    <a href="roadmaps/css-roadmap.pdf" class="btn download-btn" download>Download</a>
-                    <a href="roadmaps/css-roadmap.pdf" class="btn open-btn" target="_blank">Open</a>
+                    <a href="Roadmaps/frontend.pdf " class="btn download-btn" download>Download</a>
+                    <a href="Roadmaps/frontend.pdf " class="btn open-btn" target="_blank">Open</a>
                 </div>
                 <div class="roadmap-card">
                     <h3>JavaScript Roadmap</h3>
                     <p>Become proficient in web programming</p>
-                    <a href="roadmaps/javascript-roadmap.pdf" class="btn download-btn" download>Download</a>
-                    <a href="roadmaps/javascript-roadmap.pdf" class="btn open-btn" target="_blank">Open</a>
+                    <a href=" Roadmaps/frontend.pdf" class="btn download-btn" download>Download</a>
+                    <a href="Roadmaps/frontend.pdf" class="btn open-btn" target="_blank">Open</a>
                 </div>
                 <div class="roadmap-card">
                     <h3>PYTHON</h3>
@@ -81,9 +82,34 @@
                 <div class="roadmap-card">
                     <h3>JAVA Roadmap</h3>
                     <p>Become proficient in web programming</p>
-                    <a href="D:\projects\TECH-HUB\Roadmaps\java.pdf" class="btn download-btn" download>Download</a>
-                    <a href=" D:\projects\TECH-HUB\Roadmaps\java.pdf" class="btn open-btn" target="_blank">Open</a>
+                    <a href="Roadmaps/java.pdf " class="btn download-btn" download>Download</a>
+                    <a href="Roadmaps/java.pdf " class="btn open-btn" target="_blank">Open</a>
                 </div>
+                <div class="roadmap-card">
+                    <h3>GIT AND GitHub</h3>
+                    <p>Become proficient in web programming</p>
+                    <a href="Roadmaps/git-github.pdf  " class="btn download-btn" download>Download</a>
+                    <a href="Roadmaps/git-github.pdf" class="btn open-btn" target="_blank">Open</a>
+                </div>
+                    <div class="roadmap-card">
+                        <h3>BACKEND ROADMAPS</h3>
+                        <p>Become proficient in web programming</p>
+                        <a href="Roadmaps/backend.pdf  " class="btn download-btn" download>Download</a>
+                        <a href="Roadmaps/backend.pdf " class="btn open-btn" target="_blank">Open</a>
+                    </div>
+                     <div class="roadmap-card">
+                        <h3>FULL-STACK ROADMAPS</h3>
+                        <p>Become proficient in web programming</p>
+                        <a href="Roadmaps/full-stack.pdf " class="btn download-btn" download>Download</a>
+                        <a href="Roadmaps/full-stack.pdf " class="btn open-btn" target="_blank">Open</a>
+                    </div>
+                        <div class="roadmap-card">
+                            <h3> ALGORITHM ROADMAPS</h3>
+                            <p>Become proficient in web programming</p>
+                            <a href="Roadmaps/datastructures-and-algorithms.pdf  " class="btn download-btn" download>Download</a>
+                            <a href="Roadmaps/datastructures-and-algorithms.pdf  " class="btn open-btn" target="_blank">Open</a>
+
+
 
                 <!-- Add more roadmap cards as needed -->
             </div>
@@ -104,13 +130,13 @@
                 <h3>Quick Links</h3>
                 <ul class="list">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="projects.html">PROJECTSt</a></li>
-                    <li><a href="tutorial.html">TUTORIALS</a></li>
-                    <li><a href="roadmaps.html">ROADMAPS</a></li>
+                     <li><a href="contact.html">CONTACT</a></li>
+                     <li><a href="roadmaps.html">ROADMAPS</a></li>
+                    <li><a href="links.html">LINKS</a></li>
                     <li><a href="ebooks.html">EBOOKS</a></li>
                     <li><a href="community.html">COMMUNITY</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="contact.html">LINKS</a></li>
+                    <li><a href="projects.html">PROJECTSt</a></li>
+                    <li><a href="tutorial.html">TUTORIALS</a></li>
                 </ul>
             </div>
             <div class="footer-content">
