--- a/tutorial.html
+++ b/tutorial.html
@@ -17,10 +17,11 @@
             <div class="dropdown">
                 <a href="#" class="dropbtn">START LEARNING <i class='bx bx-chevron-down'></i></a>
                 <div class="dropdown-content">
-                    <a href="">PROJECTS</a>
+                    <a href="projects.html">PROJECTS</a>
                     <a href="tutorial.html">TUTORIALS</a>
                     <a href="roadmaps.html">ROADMAPS</a>
                     <a href="ebooks.html">EBOOKS</a>
+                    <a href="links.html">LINKS</a>
                 </div>
             </div>
             <a href="login.html">COMMUNIYTY</a>
@@ -59,11 +60,13 @@
                 <ul class="list">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="projects.html">PROJECTSt</a></li>
-                    <li><a href="tutorial.html">TUTORIALS</a></li>
-                    <li><a href="roadmaps.html">ROADMAPS</a></li>
+                    
                     <li><a href="ebooks.html">EBOOKS</a></li>
                     <li><a href="community.html">COMMUNITY</a></li>
-                    <li><a href="login.html">LINKS</a></li>
+                    <li><a href="contact.html">CONYACT</a></li>
+                    <li><a href="links.html">LINKS</a></li>
+                    <li><a href="tutorial.html">TUTORIALS</a></li>
+                    <li><a href="roadmaps.html">ROADMAPS</a></li>
 
                 </ul>
             </div>
