--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
                     <a href="roadmaps.html">ROADMAPS</a>
                     <a href="tutorial.html">TUTORIALS</a>
                     <a href="ebooks.html">EBOOKS</a>
+                    <a href="links.html">LINKS</a>
                 </div>
             </div>
             
@@ -135,6 +136,7 @@
                     <li><a href="tutorial.html">Tutorials</a></li>
                     <li><a href="ebooks.html">Ebooks</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="links.html">Links</a></li>
                 </ul>
             </div>
             <div class="footer-content">
