--- a/community.html
+++ b/community.html
@@ -188,44 +188,63 @@
         }
     </script>
 
-     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <h3>CONTACT US</h3>
-                <P>mrcollinswarah@gmail.com</P>
-                <p>collinswarah200@gmail.com</p>
-                <p>+237652868652</p>
-                <p>BAMEDA,CAMEROON</p>
-            </div>
-            <div  class="footer-content">
-                <h3>Quick Links</h3>
-                <ul class="list">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="ebooks.html">EBOOKS</a></li>
-                    <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="tutorial.html">TUTORIALS</a></li>
-                    <li><a href="roadmaps.html">ROADMAPS</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="login.html">COMMUNITY</a></li>
-                </ul>
-            </div>
-            <div class="footer-content">
-                <h3>FOLLOW US</h3>
-                <ul class="social-icons">
-                <li><a href="https://www.facebook.com/collins.warah"><i class='bx bxl-facebook' ></i></a></li>
-                <li><a href="https://wa.me/message/D6GD5Q5J5QIPB1 "><i class='bx bxl-whatsapp' ></i></a></li>
-                <li><a href="https://github.com/wara-collins"><i class='bx bxl-github' ></i></a></li>
-                <li><a href="https://www.linkedin.com/in/mr-collins-534b942b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class='bx bxl-linkedin-square'></i></a></li>
-                
-            </ul>
-            <a href="index.html" src="img/Untitled-12.jpg" alt="">
+  <footer>
+  <div class="footer-main">
+    <div class="footer-column logo-col">
+      <img src="img/Untitled-6.png" alt="TECH HUB Logo">
 
-            </div>
-        </div>
-        <div class="bottom-bar">
-            <p>&COPY;2025 COLLINS WARAH .All rights reserveed</p>
-        </div>
-      </footer>
+      <p>Your future in tech starts here</p>
+      <h3>About Us</h3>
+      <p>We want to help bring talanted students and unique startups together.</p>
+    </div>
+    <div class="footer-column info-col">
+      <h3>Information</h3>
+      <ul>
+        <li><a href="#services">About Us</a></li>
+        <li><a href="#work">How It Works</a></li>
+        <li><a href="#community">Community</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <div class="footer-column links-col">
+      <h3>Quick Links</h3>
+      <div class="links-group">
+        <ul class="list">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="ebooks.html">EBOOKS</a></li>
+          <li><a href="projects.html">PROJECTS</a></li>
+          <li><a href="roadmaps.html">ROADMAPS</a></li>
+        </ul>
+        <ul class="list">
+          <li><a href="links.html">LINKS</a></li>
+          <li><a href="contact.html">CONTACTS</a></li>
+          <li><a href="tutorial.html">TUTORIALS</a></li>
+          <li><a href="login.html">COMMUNITY</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-column contact-col">
+      <h3>Contact Us</h3>
+      <p><i class="bx bx-phone"></i> +237652868652</p>
+      <p><i class="bx bx-envelope"></i> collinswarah200@gmail.com</p>
+      <p><i class="bx bx-envelope"></i> mrcollinswarah@gmail.com</p>
+      <p><i class="bx bx-map"></i> Cameroon, North-West Region</p>
+    </div>
+  </div>
+  <div class="footer-social">
+    <ul class="social-icons">
+      <li><a href="https://www.facebook.com/collins.warah"><i class="bx bxl-facebook"></i></a></li>
+      <li><a href="https://plus.google.com/"><i class="bx bxl-linkedin-square"></i></a></li>
+      <li><a href="https://twitter.com/"><i class="bx bxl-github"></i></a></li>
+      <li><a href="https://www.instagram.com/"><i class="bx bxl-whatsapp"></i></a></li>
+    </ul>
+  </div>
+  <hr />
+  <div class="footer-bottom">
+    <p>©2025 COLLINS WARAH .All rights reserveed</p>
+    <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
+  </div>
+</footer>  
 
 </body>
 </html>
