--- a/links.html
+++ b/links.html
@@ -38,7 +38,7 @@
             <form id="link-form">
                 <div class="form-group">
                     <label for="link-url">Link URL:</label>
-                    <input type="url" id="link-url" name="link-url" required placeholder="https://example.com">
+                    <input type="url" id="link-url" name="link-url" required placeholder="paste your link here">
                 </div>
                 <div class="form-group">
                     <label for="link-title">Title:</label>
@@ -46,16 +46,16 @@
                 </div>
                 <div class="form-group">
                     <label for="link-description">Description:</label>
-                    <textarea id="link-description" name="link-description" required placeholder="Brief description of the link"></textarea>
+                    <textarea id="link-description" name="link-description" required placeholder="Description of the link"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="link-category">Category:</label>
                     <select id="link-category" name="link-category" required>
                         <option value="tutorial">Tutorial</option>
-                        <option value="tool">Tool</option>
-                        <option value="article">Article</option>
-                        <option value="course">Course</option>
-                        <option value="resource">Resource</option>
+                        <option value="tool">Ebooks</option>
+                        <option value="article">project</option>
+                        <option value="course">Community</option>
+                        <option value="resource">Roadmaps</option>
                         <option value="other">Other</option>
                     </select>
                 </div>
@@ -66,10 +66,10 @@
         <div class="filter-buttons">
             <button class="filter-btn active" data-category="all">All</button>
             <button class="filter-btn" data-category="tutorial">Tutorials</button>
-            <button class="filter-btn" data-category="tool">Tools</button>
-            <button class="filter-btn" data-category="article">Articles</button>
-            <button class="filter-btn" data-category="course">Courses</button>
-            <button class="filter-btn" data-category="resource">Resources</button>
+            <button class="filter-btn" data-category="Tool">ebooks</button>
+            <button class="filter-btn" data-category="article">projects</button>
+            <button class="filter-btn" data-category="course">roadmaps</button>
+            <button class="filter-btn" data-category="resource">community</button>
             <button class="filter-btn" data-category="other">Other</button>
         </div>
 
